--- a/res/layout/fragment_inputcell_picture.xml
+++ b/res/layout/fragment_inputcell_picture.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="4dp"
     android:layout_marginTop="4dp"
     android:orientation="vertical"
@@ -11,7 +11,7 @@
         android:id="@+id/label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="选择照片"
+        android:text="选择图片"
         android:textColor="@android:color/black"
         android:textSize="12sp" />
 
@@ -25,8 +25,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="请选择照片"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:text="请选择图片" />
 
         <ImageView
             android:id="@+id/image"
