--- a/res/layout/fragment_version.xml
+++ b/res/layout/fragment_version.xml
@@ -2,23 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-	android:gravity="center"
+    android:gravity="center"
     android:orientation="horizontal" >
-    
-    <ImageView 
+
+    <ImageView
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:scaleType="centerInside"
-        android:src="@drawable/ic_launcher"
-        />
+        android:src="@drawable/ic_launcher" />
 
-    <TextView 
+    <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="2dp"
-        android:text="APPNAME_VER"
+        android:text="APPNAME VER"
         android:textColor="@android:color/white"
-        android:textSize="9sp"
-        />
+        android:textSize="9sp" />
+
 </LinearLayout>
