--- a/res/layout/fragment_page_feed_list.xml
+++ b/res/layout/fragment_page_feed_list.xml
@@ -7,7 +7,7 @@
         android:id="@+id/navbar"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:background="@drawable/naver_bg" >
+        android:background="@android:color/white" >
 
         <TextView
             android:layout_width="wrap_content"
@@ -19,7 +19,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="1dp"
             android:layout_gravity="bottom"
             android:background="@android:color/darker_gray" />
     </FrameLayout>
@@ -28,7 +28,7 @@
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="44dp">
+        android:layout_marginTop="44dp" >
     </ListView>
 
 </FrameLayout>
